--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - ./app/src:/home/node/tasks-app
     networks:
       - tasks-network
-    command: sh -c "npm install && npm install -g knex && npm install -g nodemon && npm run dev && npm run migrate"
+    command: sh -c "npm install && npm install -g knex && npm install -g nodemon && npm run dev"
     env_file:
       - ./app/src/.env
     depends_on:
